--- a/src/main/css/activities.css
+++ b/src/main/css/activities.css
@@ -41,7 +41,9 @@
     color: #797979;
     padding-left: 3px;
     font-size: 12px;
-    margin: 0 50px;
+    border: 1px solid #DDD;
+    border-top: 1px solid #EEE;
+    border-bottom: 1px solid #B7B7B7;
 }
 
 .table-style table tr {
@@ -61,10 +63,10 @@ input.buttonAt {
     outline: none;
     vertical-align: middle;
     position: relative;
-    margin-left: -155px;
+    margin-left: -105px;
 }
 
-body{
+body {
     background-color: #f4f5f9;
 }
 
