--- a/src/main/css/disactive.css
+++ b/src/main/css/disactive.css
@@ -54,7 +54,7 @@
 }
 
 input.buttonAt {
-    background: url(/src/main/images/se.gif) no-repeat scroll left center transparent;
+    background: url(/hello-ghpages/src/main/images/se.gif) no-repeat scroll left center transparent;
     border: 0px none;
     cursor: pointer;
     height: 28px;
