--- a/src/main/css/introduce.css
+++ b/src/main/css/introduce.css
@@ -77,7 +77,7 @@ body {
 }
 
 .actives {
-    background: url(/src/main/images/dbx.png) center no-repeat;
+    background: url(/hello-ghpages/src/main/images/dbx.png) center no-repeat;
     background-size: 100% 100%;
     color: red;
     transition: .5s;
