--- a/src/main/css/person.css
+++ b/src/main/css/person.css
@@ -181,7 +181,7 @@ img.jingD {
     height: 85px;
 }
 
-.total-total {
+.person_total {
     width: 1020px;
     margin: 0 auto;
     margin-top: 30px;
