--- a/src/main/css/adversting.css
+++ b/src/main/css/adversting.css
@@ -234,3 +234,9 @@ body {
 #jjdd.activied {
     color: #ef1a10;
 }
+
+.total_total {
+    width: 1020px;
+    margin: 0 auto;
+    margin-top: 30px;
+}
