--- a/src/main/css/main.css
+++ b/src/main/css/main.css
@@ -2,7 +2,7 @@
 	Typography
 -------------------------------------------------------------------------------*/
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700);
 p {
     font-size: 14px;
     line-height: 22.4px;
@@ -160,12 +160,15 @@ ul li {
 }
 
 .footer {
+    width: 100%;
+    min-width: 1120px;
     text-align: center;
     background-color: #201f22;
 }
 
 .banner {
     min-height: 750px;
+    min-width: 1120px;
 }
 
 #header .header-content {
