--- a/src/main/css/putforward.css
+++ b/src/main/css/putforward.css
@@ -174,6 +174,12 @@ p.bill strong {
     font-size: 14px;
 }
 
-body{
+body {
     background-color: #f4f5f9;
+}
+
+.total_total {
+    width: 1020px;
+    margin: 0 auto;
+    margin-top: 30px;
 }
