--- a/src/main/css/recharge.css
+++ b/src/main/css/recharge.css
@@ -123,6 +123,12 @@ a.serve_qq {
     padding: 20px 40px;
 }
 
-body{
+body {
     background-color: #f4f5f9;
+}
+
+.total_total {
+    width: 1020px;
+    margin: 0 auto;
+    margin-top: 30px;
 }
