--- a/src/main/css/introduce.css
+++ b/src/main/css/introduce.css
@@ -1,12 +1,12 @@
-.total_page{
+.total_page {
     min-width: 1200px;
     height: 1400px;
-    background: url(/src/main/images/banner.jpg) center no-repeat;
+    background: url(/hello-ghpages/src/main/images/banner.jpg) center no-repeat;
     background-size: 100% 100%;
     overflow: hidden;
 }
 
-body{
+body {
     font-family: Microsoft YaHei;
     height: auto !important;
     list-style: none;
@@ -18,7 +18,7 @@ body{
     width: 100%;
 }
 
-.total_content{
+.total_content {
     width: 1200px;
     margin: 0 auto;
     background: #ffffff;
@@ -76,8 +76,8 @@ body{
     border-top: solid 1px #e7e7ff;
 }
 
-.actives{
-    background: url(/src/main/images/dbx.png) center no-repeat;
+.actives {
+    background: url(/hello-ghpages/src/main/images/dbx.png) center no-repeat;
     background-size: 100% 100%;
     color: red;
     transition: .5s;
@@ -95,7 +95,7 @@ body{
     margin: 0 auto;
 }
 
-.part1{
+.part1 {
     overflow: hidden;
     min-width: 1200px;
     height: 700px;
@@ -115,7 +115,7 @@ ul {
     padding: 0;
 }
 
-li{
+li {
     list-style: none;
 }
 
@@ -149,14 +149,14 @@ li{
     line-height: 50px;
 }
 
-.part2{
+.part2 {
     overflow: hidden;
     min-width: 1200px;
     height: 800px;
     background-color: #f8fbff;
 }
 
-.part2 h1{
+.part2 h1 {
     margin-top: 76px;
     margin-bottom: 72px;
     text-align: center;
@@ -164,7 +164,7 @@ li{
     color: #1f2332;
 }
 
-.act_part2{
+.act_part2 {
     background-color: #697bff;
     color: #697bff;
     transition: .5s;
@@ -188,7 +188,7 @@ li{
     cursor: pointer;
 }
 
-.part2 ol{
+.part2 ol {
     height: 6px;
     width: 1000px;
     display: flex;
@@ -198,31 +198,31 @@ li{
     padding: 0;
 }
 
-.part2 ol li{
+.part2 ol li {
     width: 25%;
     border-radius: 6px;
 }
 
-.part2_content{
+.part2_content {
     width: 1200px;
     height: 484px;
     margin: 0px auto;
 }
 
-.part2_content > div{
+.part2_content>div {
     width: 100%;
     height: 484px;
     overflow: hidden;
 }
 
-.part3{
+.part3 {
     overflow: hidden;
     min-width: 1200px;
     height: 450px;
     background: #f8fbff;
 }
 
-.part3 h1{
+.part3 h1 {
     margin-top: 76px;
     margin-bottom: 72px;
     text-align: center;
@@ -230,21 +230,21 @@ li{
     color: #1f2332;
 }
 
-.part3 img{
+.part3 img {
     display: block;
     width: 100%;
     margin-top: 50px;
 }
 
-.part4{
+.part4 {
     min-width: 1200px;
     height: 1100px;
-    background: url(/src/main/images/cjwt.jpg) center no-repeat;
+    background: url(/hello-ghpages/src/main/images/cjwt.jpg) center no-repeat;
     background-size: 100% 100%;
     overflow: hidden;
 }
 
-.part4 h1{
+.part4 h1 {
     margin-top: 76px;
     margin-bottom: 72px;
     color: #ffffff;
@@ -252,30 +252,30 @@ li{
     font-size: 36px;
 }
 
-.part4_header{
+.part4_header {
     width: 1250px;
     height: 750px;
     margin: 0 auto;
     margin-top: 50px;
 }
 
-.part4_left{
+.part4_left {
     width: 50%;
     float: left;
 }
 
-.left_content{
+.left_content {
     color: #ffffff;
     margin-top: 40px;
     margin-left: 30px;
 }
 
-.left_content h3{
+.left_content h3 {
     font-size: 16px;
     line-height: 30px;
 }
 
-.left_content p{
+.left_content p {
     font-size: 15px;
     line-height: 25px;
 }
@@ -285,33 +285,33 @@ li{
     float: right;
 }
 
-.right_content{
+.right_content {
     color: #ffffff;
     margin-top: 40px;
     margin-left: 30px;
 }
 
-.part4-right .right_content:nth-child(3){
+.part4-right .right_content:nth-child(3) {
     margin-top: 65px;
 }
 
-.right_content h3{
+.right_content h3 {
     font-size: 16px;
     line-height: 30px;
 }
 
-.right_content p{
+.right_content p {
     font-size: 15px;
     line-height: 25px;
 }
 
-.part4_btn{
+.part4_btn {
     width: 100%;
     height: 80px;
     margin: 0 auto;
 }
 
-.part4_btn a{
+.part4_btn a {
     display: block;
     width: 400px;
     height: 80px;
@@ -326,7 +326,28 @@ li{
     cursor: pointer;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea{
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+pre,
+form,
+fieldset,
+legend,
+button,
+input,
+textarea {
     margin: 0;
     padding: 0
 }
